--- a/templates/head.html
+++ b/templates/head.html
@@ -1,18 +1,31 @@
-{% load staticfiles %}<meta charset="utf-8">
+{% load staticfiles %}
+
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="{% static 'yp.css' %}">
+
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-{% if JavaScript %}{% if 'tablesorter' in JavaScript %}
-<script src="{% static 'jquery.tablesorter.min.js' %}"></script>
-<link rel="stylesheet" href="{% static 'tablesorter.css' %}">
-{% endif %}{% if 'pubmed' in JavaScript %}
-<script src="{% static 'pubmed.js' %}"></script>
-{% endif %}{% if 'd3' in JavaScript %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-<script src="{% static 'd3/colorbrewer.js' %}"></script>
-<link rel="stylesheet" href="{% static 'd3/'|add:d3|add:'.css' %}">
-<script src="{% static 'd3/'|add:d3|add:'.js' %}"></script>
-{% endif %}{% endif %}
-<link rel="stylesheet" href="{% static 'yp.css' %}">
+
+{% if JavaScript %}
+
+{% if 'tablesorter' in JavaScript %}
+    <script src="{% static 'jquery.tablesorter.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'tablesorter.css' %}">
+{% endif %}
+
+{% if 'pubmed' in JavaScript %}
+    <script src="{% static 'pubmed.js' %}"></script>
+{% endif %}
+
+{% if 'd3' in JavaScript %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+    <script src="{% static 'd3/colorbrewer.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'd3/'|add:d3|add:'.css' %}">
+    <script src="{% static 'd3/'|add:d3|add:'.js' %}"></script>
+{% endif %}
+
+{% endif %}
