--- a/phenotypes/templates/phenotypes/d3.html
+++ b/phenotypes/templates/phenotypes/d3.html
@@ -24,4 +24,7 @@ var colors=colorbrewer.BuPu[9];
 </div>
 {% include "footer.html" %}
 </div{# container-fluid #}>
+
+    {% include "ga.html" %}
+
 </body></html>
