A few more aesthetic and text fixes.

--- a/templates/yeastphenome/about.html
+++ b/templates/yeastphenome/about.html
@@ -23,9 +23,9 @@
 
             <p>YeastPhenome.org is a collaborative project focused on compiling a comprehensive compendium of systematic phenotypic data for budding yeast <em>Saccharomyces cerevisiae</em>.</p>
 
-            <p>Our goal is to gather, process and standardize the results of every genome-scale experiment that has examined the yeast deletion collection for one or more phenotypes.</p>
+            <p>Our goal is to collect, process and share in a standardized format the results of all genome-scale experiments that have examined the yeast deletion collection for any given <a href="{% url 'phenotypes:index' %}">phenotype</a> under any given <a href="{% url 'conditions:index' %}">experimental condition</a>.</p>
 
-            <p>We are interested in both quantitative and qualitative phenotypes, as long as, for a given study, the data were collected systematically and for a large number of mutants.</p>
+            <p>We are interested in both quantitative and qualitative phenotypes, as long as, for a given study, the data were collected systematically and for more than 1,000 mutants.</p>
 
             <p>Our primary source of data are the supplementary materials of the relevant <a href="{% url 'papers:all' %}">publications</a>. On top of that, <a href="{% url 'contributors' %}">many authors</a> have contributed more complete and previously unpublished versions of their datasets (e.g., raw quantitative values from which the published hit list was derived). These datasets are specifically flagged to emphasize their special status.</p>
 
