--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer>
-For comments &amp; feedback: <a href="mailto:abarysh@princeton.edu" title="Please, send whatever you have.">abarysh@princeton.edu</a>.
+For questions &amp; comments: <a href="mailto:abarysh@princeton.edu" title="We get particularly excited about bug reports.">abarysh@princeton.edu</a>.
 </footer>
