Added "Contributors" to the navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,14 +11,16 @@
 	<span class="glyphicon glyphicon-menu-hamburger"></span>
       </button>
       <a class="navbar-brand" href="{% url 'index' %}">{{ SITE_NAME }}</a>
-    </div{# navbar-header #}>
+    </div>
 
     <ul class="collapse navbar-collapse nav navbar-nav" id="nb-sections">
-      <li{% if 'papers' = active %} class="active"{% endif %}><a href="{% url 'papers:all' %}">Papers</a></li>
-      <li{% if 'phenotypes' = active %} class="active"{% endif %}><a href="{% url 'phenotypes:index' %}">Phenotypes</a></li>
-      <li{% if 'conditions' = active %} class="active"{% endif %}><a href="{% url 'conditions:index' %}">Experimental conditions</a></li>
-      <li{% if 'about' = active %} class="active"{% endif %}><a href="{% url 'about' %}">About</a></li>
-    </ul{# nb-sections #}>
+      <li {% if 'papers' = active %} class="active" {% endif %} ><a href="{% url 'papers:all' %}">Papers</a></li>
+      <li {% if 'phenotypes' = active %} class="active" {% endif %} ><a href="{% url 'phenotypes:index' %}">Phenotypes</a></li>
+      <li {% if 'conditions' = active %} class="active" {% endif %} ><a href="{% url 'conditions:index' %}">Experimental conditions</a></li>
+      <li {% if 'about' = active %} class="active" {% endif %} ><a href="{% url 'about' %}">About</a></li>
+      <li {% if 'contributors' = active %} class="active" {% endif %} ><a href="{% url 'contributors' %}">Contributors</a></li>
+    </ul>
+
     <div class="collapse navbar-collapse" id="nb-search">
       <form class="navbar-form navbar-right" role="search" action="{% url 'papers:all' %}" method="GET">
 	<div class="form-group">
@@ -26,6 +28,6 @@
 	</div>
 	<button type="submit" class="btn btn-default">Submit</button>
       </form>
-    </div{# nb-search #}>
-  </div{# container-fluid #}>
+    </div>
+  </div>
 </nav>
