--- a/papers/templates/zip.html
+++ b/papers/templates/zip.html
@@ -2,6 +2,6 @@
 <a class="btn btn-success" role="button" href="{% url 'papers:zipo' pk=paper.pk %}">Download data</a>
 {% else %}
 <div title="{% if paper.should_have_data %}Unable to locate data files{% else %}No data loaded{% endif %}">
-  <a class="btn btn-success disabled" href="{% url 'papers:zipo' pk=paper.pk %}">Download data</a>
+  <a class="btn btn-default disabled" href="{% url 'papers:zipo' pk=paper.pk %}">Data not available</a>
 </div>
 {% endif %}
