Added the Curation History to the paper's detail page on front-end.

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -110,7 +110,7 @@
                         {% for x in paper.history %}
                         <tr>
                             <td>{{ x.status_date }}</td>
-                            <td>{{ x.type|capfirst }} {{ x.status.status_name }}</td>
+                            <td>{{ x.type|capfirst }} {{ x.status.status_name }}.</td>
                         </tr>
                         {% endfor %}
                     </table>
