Updated table at conditions/index.html

--- a/conditions/templates/conditions/index.html
+++ b/conditions/templates/conditions/index.html
@@ -19,11 +19,11 @@
   {% endcomment %}
   <thead>
     <tr>
-      <th>Short name</th>
-      <th>Full name</th>
-      <th>Doses</th>
-      <th>Phenotypes</th>
-      <th>Papers</th>
+      <th width="20%">Short name</th>
+      <th width="20%">Full name</th>
+      <th width="20%">Doses</th>
+      <th width="20%">Phenotypes</th>
+      <th width="20%">Papers</th>
     </tr>
   </thead><tbody>
     {% for conditiontype in conditiontype_list %}
