Update the about.html page.

--- a/templates/yeastphenome/about.html
+++ b/templates/yeastphenome/about.html
@@ -29,6 +29,8 @@
 
             <p>Our primary source of data are the supplementary materials of the relevant <a href="{% url 'papers:all' %}">publications</a>. On top of that, <a href="{% url 'contributors' %}">many authors</a> have contributed more complete and previously unpublished versions of their datasets (e.g., raw quantitative values from which the published hit list was derived). These datasets are specifically flagged to emphasize their special status.</p>
 
+            <p>The individual datasets are available for download as soon as they are curated (e.g., see the green "Download data" button for <a href="http://www.yeastphenome.org/papers/125/">Bleackley MR~MacGillivray RT, 2011</a>). The full compendium of all datasets will be accessible later on, as soon as we finalize the standardized nomenclature of phenotypes and experimental conditions.</p>
+
             <p>Yeastphenome.org was created and is being maintained at <a class="external" href="http://www.princeton.edu/">Princeton University</a> by:</p>
 
             <ul>
