Simplified the search, the main Papers list view and added the filter to exclude not relevant papers

--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -23,7 +23,7 @@
 
             <div class="jumbotron">
 
-                <p>Our goal is to collect, organize and share in a standardized format all phenotypic surveys of the <em>Saccharomyces cerevisiae</em> deletion collection.</p>
+                <p>Our goal is to collect, organize and share in a standardized format all phenotypic screens of the <em>Saccharomyces cerevisiae</em> deletion collection.</p>
 
                 <p><a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">Learn more</a></p>
 
